--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,5 +37,21 @@
       }
     }
   }
+
+  .camera-container {
+    position: relative;
+    margin-top: 20px;
+  }
+  
+  #video {
+    width: 100%;
+    height: auto;
+    border: 1px solid #ccc;
+  }
+  
+  button {
+    margin-top: 10px;
+  }
+  
   
   
