--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
           <!-- Texto de instrucciones debajo -->
           <div class="content mt-4">
             <p><strong> Nota: Dibuja un número del 0 al 9 en el recuadro de la izquierda o sube una imagen y haz clic en "Validar Número". Asegúrate de que el trazo sea claro para mejorar la precisión del reconocimiento. El reconocimiento ha sido entrado con el modelo MNIST</strong> </p>
-            <h3>Reconomiento de Números: Rolando Perez 3590-18-24604</h3>
-            <h3>El resultado esta siendo guardado en la base de datos proporcionada el dia del parcial.</h3>
+            <p>Reconomiento de Números: Rolando Perez 3590-18-24604</p>
+            <p>El resultado esta siendo guardado en la base de datos proporcionada el dia del parcial.</p>
           </div>
         </div>
       </div>
